add For Example

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -98,6 +98,8 @@ BOSH Acceptance Tests (BATS).
 Target the MicroBOSH with the host and domain name or IP address.
 The `bosh target` command prompts you for a username and password.
 
+For example:
+
 <pre class="terminal">
 $ bosh target alpha.microbosh-test.example.com
 Target set to `vpc-alpha-microbosh-test'
