--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -110,7 +110,8 @@ Logged in as `admin'
 
 **Note**: The first time you log in,
 the username and password are both `admin`.
-**Extremely Important**: Change the default password to a strong password immediately.
+
+**Extremely Important**: _Change the default password to a strong password immediately._
 
 Run `bosh vms`.
 
