replace illustration with better one

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -12,7 +12,7 @@ How you proceed from there depends on two questions:
 
 The illustration below shows the paths to these outcomes and the choices along the way.
 
-<%= image_tag("bosh-outcomes.png") %>
+<%= image_tag("bosh-env-vertical.png") %>
 
 ## <a id="single-vm"></a> Deploying Single-VM BOSH  ##
 
