fix text to go with new picture

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -10,7 +10,9 @@ How you proceed from there depends on two questions:
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or do both.
 1. Whether the single-VM BOSH suits your needs, or a multi-VM BOSH is preferable.
 
-The illustration below shows the paths to these outcomes and the choices along the way.
+The illustration below shows the choices you make when building your environment, and the things you can do with
+your environment as a result.
+You can build your environment to provide any or all of the three operating capabilities shown.
 
 <%= image_tag("bosh-env-vertical.png") %>
 
